Fixed the issue where commas wrapped to the next line and made the wrong guess appear in the HTML in caps, but in the process, created a new bug, which I have commented in at the top of the code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 body {
     background-image: url("../images/background.jpg");
-    min-height: 100%;
-    display: table;
 }
 
 h2, p {
@@ -26,10 +24,6 @@ p {
     font-weight: normal;
     font-size: 3.5vw;
     letter-spacing: 1.5vw;
-}
-
-#mainContainer {
-    flex-grow: 1 1 auto;
 }
 
 #mainContainer, #imageColumn, #textInterface {
@@ -63,6 +57,5 @@ p {
 
     #textInterface {
         border-left-width: 0 !important;
-        border-top-width: 3px !important;
     }
 }
